--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,5 +9,5 @@ jobs:
     working_directory: /go/src/github.com/tenprotocol/tenprotocol
     steps:
       - checkout
-      - run: go install --tags extended https://github.com/gohugoio/hugo
+      - run: go install --tags extended github.com/gohugoio/hugo
       - run: python
