--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,3 +38,11 @@ jobs:
           key: go-mod-v1-{{ checksum "go.sum" }}
           paths:
             - "/go/pkg/mod"
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build
+        filters:
+          branches:
+            only: master
