--- a/docs/config.yml
+++ b/docs/config.yml
@@ -1,38 +1,38 @@
-baseURL = "https://tenprotocol.org/"
-languageCode = "en"
-title = "Threat Exposure Notification Protocol"
-theme = "terminal"
-publishDir = "../public"
+baseURL: https://tenprotocol.org/
+languageCode: en
+theme: terminal
+publishDir: ../public
 
-[languages]
-  [languages.en]
-    copyright = "© 2020 SwitchBit, Inc."
-
-[params]
-  [logo]
-    logoText = "10P"
-
+params:
   # dir name of your blog content (default is `content/posts`)
   # contentTypeName = "posts"
 
   # ["orange", "blue", "red", "green", "pink"]
-  themeColor = "orange"
+  themeColor: orange
 
   # if you set this to 0, only submenu trigger will be visible
-  showMenuItems = 0
+  showMenuItems: 0
 
   # show selector to switch language
-  showLanguageSelector = false
+  showLanguageSelector: false
 
   # set theme to full screen width
-  fullWidthTheme = false
+  fullWidthTheme: false
 
   # center theme with default width
-  centerTheme = false
+  centerTheme: false
 
   # set a custom favicon (default is a `themeColor` square)
-  # favicon = "favicon.ico"
+  # favicon: "favicon.ico"
 
   # set all headings to their default size (depending on browser settings)
   # it's set to `true` by default
-  # oneHeadingSize = false
+  # oneHeadingSize: false
+
+  logo:
+    logoText: "10P"
+
+languages:
+  en:
+    title: Threat Exposure Notification Protocol
+    copyright: "© 2020 SwitchBit, Inc."
