--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,8 @@ jobs:
       - run:
           name: Build website
           command: |
+            git config user.email "ci@tenprotocol.org"
+            git config user.name "CI"
             cd docs
             ./build.sh
       - save_cache:
