--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,8 @@ jobs:
       - run:
           name: Build website
           command: |
-            git config user.email "ci@tenprotocol.org"
-            git config user.name "CI"
+            git config --global user.email "ci@tenprotocol.org"
+            git config --global user.name "CI"
             cd docs
             ./build.sh
       - save_cache:
